# face-detector-using-cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_template.txt  Makefile  README.md  cmake_install.cmake  estimate_angle.md  estimate_distance.py  face_detection_mediapipe.py  face_detection_opencv_dnn  face_detection_opencv_dnn.cpp  face_detection_opencv_dnn.py  tutorial.txt
models/: deploy.prototxt
output-dnn-videos/: grabbed_from_camera.avi
